--- a/services/bl01t-ea-test-02/config/ioc.yaml
+++ b/services/bl01t-ea-test-02/config/ioc.yaml
@@ -1,19 +1,19 @@
-# yaml-language-server: $schema=https://github.com/epics-containers/ioc-adsimdetector/releases/download/2024.4.1/ibek.ioc.schema.json
+# yaml-language-server: $schema=https://github.com/epics-containers/ioc-adsimdetector/releases/download/2024.6.1/ibek.ioc.schema.json
 
-ioc_name: "{{ __utils__.get_env('IOC_NAME') }}"
+ioc_name: "{{ _global.get_env('IOC_NAME') }}"
 description: Example simulated camera for BL01T
 
 entities:
   - type: ADSimDetector.simDetector
     PORT: DET.DET
     P: BL01T-EA-TST-02
-    R: ":DET:"
+    R: ':DET:'
 
   - type: ADCore.NDPvaPlugin
     PORT: DET.PVA
     PVNAME: BL01T-EA-TST-02:PVA:OUTPUT
     P: BL01T-EA-TST-02
-    R: ":PVA:"
+    R: ':PVA:'
     NDARRAY_PORT: DET.DET
 
   - type: epics.StartupCommand
