--- a/include/ioc.yml
+++ b/include/ioc.yml
@@ -1,10 +1,77 @@
+# common features for all IOCs in this repository.
+#
+# For use with 'extends' in each individual IOC service description
+
 services:
 
-  ioc:
-    volumes:
-      - opi:/epics/opi/
+ # linux IOCs that run in a container ##########################################
+  linux_ioc:
+
+    labels:
+      # a reference to which repository created this IOC
+      ioc_group: bl01t
+      # lets tools like ec identify which containers are IOCs
+      is_ioc: true
+      # in K8S each IOC can have an indication of what physical location it
+      # should be (used by machine IOCs) this is for parity (but redundant).
+      location: localhost
+
+    # NOTE: blank environment vars should be overriden in individual IOCs
+    environment:
+      IOCSH_PS1:
+      IOC_NAME:
+      # a prefix for devIocStats PVs. Configured externally for health_check
+      IOC_PREFIX:
+      IOC_LOCATION: localhost
+      BEAMLINE: bl01t
+      IOC_GROUP: bl01t
+
     tty: true
     stdin_open: true
     networks:
       - channel_access
+
+    volumes:
+      - opi:/epics/opi/
+
+    # all profiles use IOCs
+    profiles:
+      - develop
+      - deploy
+      - deploy-gateway
+
+# proxy services that each manage an RTEMS hard IOC ############################
+  rtems_ioc:
+
+    labels:
+      location: localhost
+      ioc_group: bl01t
+
+    &environment environment:
+      IOCSH_PS1:
+      IOC_NAME:
+      IOC_PREFIX:
+      IOC_LOCATION: localhost
+      BEAMLINE: bl01t
+      IOC_GROUP: bl01t
+
+      RTEMS_ROOT_NFS: /nfsv2-tftp
+      RTEMS_ROOT_TFTP: /nfsv2-tftp
+      RTEMS_NFS_IP": 172.23.90.238
+      RTEMS_TFTP_IP": 172.23.90.238
+      # NB. Gateway and Netmask are the same for all RTEMS IOCs on a beamline
+      # But may need to move these to individual IOCs for the Machine.
+      RTEMS_IOC_NETMASK": 255.255.240.0
+      RTEMS_IOC_GATEWAY": 172.23.240.254
+
+    tty: true
+    stdin_open: true
+    networks:
+      - channel_access
+
+    volumes:
+      - opi:/epics/opi/
+
+
+
 
