--- a/include/ioc.yml
+++ b/include/ioc.yml
@@ -2,6 +2,10 @@
 #
 # For use with 'extends' in each individual IOC service description
 
+include:
+  - networks.yml
+  - volumes.yml
+
 services:
 
  # linux IOCs that run in a container ##########################################
