--- a/include/ioc.yml
+++ b/include/ioc.yml
@@ -9,7 +9,10 @@ include:
 services:
 
  # linux IOCs that run in a container ##########################################
-  linux_ioc:
+  linux_ioc: &linux_ioc
+
+    depends_on:
+      - init_iocs
 
     labels:
       # a reference to which repository created this IOC
@@ -35,12 +38,9 @@ services:
 
     # for docker use 'networks: [channel_access]'
     # for podman at DLS use 'network_mode: host'
-    network_mode: host
-    # networks:
-    #   - channel_access
-
-    volumes:
-      - opi:/epics/opi/
+    # network_mode: host
+    networks:
+      - channel_access
 
     # all profiles use IOCs
     profiles:
@@ -51,18 +51,10 @@ services:
 # proxy services that each manage an RTEMS hard IOC ############################
   rtems_ioc:
 
-    labels:
-      location: localhost
-      ioc_group: bl01t
+    # use an alias to copy all of the linux_ioc spec and add RTEMS environment
+    <<: *linux_ioc
 
-    &environment environment:
-      IOCSH_PS1:
-      IOC_NAME:
-      IOC_PREFIX:
-      IOC_LOCATION: localhost
-      BEAMLINE: bl01t
-      IOC_GROUP: bl01t
-
+    environment:
       RTEMS_ROOT_NFS: /nfsv2-tftp
       RTEMS_ROOT_TFTP: /nfsv2-tftp
       RTEMS_NFS_IP": 172.23.90.238
@@ -71,14 +63,6 @@ services:
       # But may need to move these to individual IOCs for the Machine.
       RTEMS_IOC_NETMASK": 255.255.240.0
       RTEMS_IOC_GATEWAY": 172.23.240.254
-
-    tty: true
-    stdin_open: true
-    networks:
-      - channel_access
-
-    volumes:
-      - opi:/epics/opi/
 
 
 
