--- a/include/ioc.yml
+++ b/include/ioc.yml
@@ -35,18 +35,13 @@ services:
 
     tty: true
     stdin_open: true
+    restart: unless-stopped
 
     # for docker use 'networks: [channel_access]'
     # for podman at DLS use 'network_mode: host'
     # network_mode: host
     networks:
       - channel_access
-
-    # all profiles use IOCs
-    profiles:
-      - develop
-      - deploy
-      - deploy-gateway
 
 # proxy services that each manage an RTEMS hard IOC ############################
   rtems_ioc:
