move phoebus inside network

--- a/include/ioc.yml
+++ b/include/ioc.yml
@@ -43,6 +43,10 @@ services:
     networks:
       - channel_access
 
+    expose:
+      - "5064-5065/udp"
+      - "5064-5065"
+
 # proxy services that each manage an RTEMS hard IOC ############################
   rtems_ioc:
 
