use debug version of gateways

--- a/include/ioc.yml
+++ b/include/ioc.yml
@@ -26,18 +26,16 @@ services:
 
     tty: true
     stdin_open: true
-    restart: always
+    restart: unless-stopped
 
     # for docker use 'networks: [channel_access]'
     # for podman at DLS use 'network_mode: host'
     # or for both use 'networks: [channel_access]'
     #    and ca-gateway + pvagw
-    network_mode: host
+    # network_mode: host
 
-    # TODO TEMPORARY until we get pva gateway working
-    # networks:
-    #   - channel_access
-
+    networks:
+      - channel_access
     expose:
       - "5064-5065/udp"
       - "5064-5065"
