--- a/services/bl01t-di-cam-01/config/ioc.yaml
+++ b/services/bl01t-di-cam-01/config/ioc.yaml
@@ -8,6 +8,8 @@ entities:
     PORT: DET.DET
     P: BL01T-DI-CAM-01
     R: ":DET:"
+    WIDTH: 1024
+    HEIGHT: 1024
 
   - type: ADCore.NDPvaPlugin
     PORT: DET.PVA
@@ -15,3 +17,18 @@ entities:
     P: BL01T-DI-CAM-01
     R: ":PVA:"
     NDARRAY_PORT: DET.DET
+
+  - type: ADCore.NDStdArrays
+    PORT: DET.ARR
+    P: BL01T-DI-CAM-01
+    R: ":ARR:"
+    NDARRAY_PORT: DET.DET
+    TYPE: Int8
+    NELEMENTS: 1048576
+    FTVL: UCHAR
+
+  # - type: ADCore.NDROI
+  #   PORT: DET.ROI
+  #   P: BL01T-DI-CAM-01
+  #   R: ":ROI:"
+  #   NDARRAY_PORT: DET.DET
