--- a/services/bl01t-di-cam-01/config/ioc.yaml
+++ b/services/bl01t-di-cam-01/config/ioc.yaml
@@ -8,8 +8,18 @@ entities:
     PORT: DET.DET
     P: BL01T-DI-CAM-01
     R: ":DET:"
+    # DATATYPE:0 = Int8 - TODO add an enum to the support yaml
+    DATATYPE: 0
     WIDTH: 1024
     HEIGHT: 1024
+
+  - type: epics.dbpf
+    pv: BL01T-DI-CAM-01:DET:AcquireTime
+    value: "0.1"
+
+  - type: epics.dbpf
+    pv: BL01T-DI-CAM-01:ARR:EnableCallbacks
+    value: "1"
 
   - type: ADCore.NDPvaPlugin
     PORT: DET.PVA
@@ -25,10 +35,46 @@ entities:
     NDARRAY_PORT: DET.DET
     TYPE: Int8
     NELEMENTS: 1048576
-    FTVL: UCHAR
+    FTVL: CHAR
 
-  # - type: ADCore.NDROI
-  #   PORT: DET.ROI
+  - type: ADCore.NDStdArrays
+    PORT: DET.ARR2
+    P: BL01T-DI-CAM-01
+    R: ":ARR2:"
+    NDARRAY_PORT: DET.DET
+    TYPE: Int8
+    NELEMENTS: 1048576
+    FTVL: CHAR
+
+  - type: ADCore.NDROI
+    PORT: DET.ROI
+    P: BL01T-DI-CAM-01
+    R: ":ROI:"
+    NDARRAY_PORT: DET.DET
+
+  - type: ADCore.NDStats
+    PORT: DET.STAT
+    P: BL01T-DI-CAM-01
+    R: ":STAT:"
+    NDARRAY_PORT: DET.DET
+    XSIZE: 1024
+    YSIZE: 1024
+    HIST_SIZE: 20
+
+  # - type: ADCore.NDProcess
+  #   PORT: DET.PROC
   #   P: BL01T-DI-CAM-01
-  #   R: ":ROI:"
+  #   R: ":PROC:"
   #   NDARRAY_PORT: DET.DET
+
+  - type: ADCore.NDFileHDF5
+    PORT: DET.HDF
+    P: BL01T-DI-CAM-01
+    R: ":HDF:"
+    NDARRAY_PORT: DET.DET
+
+  - type: ADCore.NDFileTIFF
+    PORT: DET.TIFF
+    P: BL01T-DI-CAM-01
+    R: ":TIFF:"
+    NDARRAY_PORT: DET.DET
