--- a/services/bl01t-di-cam-01/config/ioc.yaml
+++ b/services/bl01t-di-cam-01/config/ioc.yaml
@@ -32,16 +32,7 @@ entities:
     PORT: DET.ARR
     P: BL01T-DI-CAM-01
     R: ":ARR:"
-    NDARRAY_PORT: DET.DET
-    TYPE: Int8
-    NELEMENTS: 1048576
-    FTVL: CHAR
-
-  - type: ADCore.NDStdArrays
-    PORT: DET.ARR2
-    P: BL01T-DI-CAM-01
-    R: ":ARR2:"
-    NDARRAY_PORT: DET.DET
+    NDARRAY_PORT: DET.PROC
     TYPE: Int8
     NELEMENTS: 1048576
     FTVL: CHAR
@@ -61,20 +52,20 @@ entities:
     YSIZE: 1024
     HIST_SIZE: 20
 
-  # - type: ADCore.NDProcess
-  #   PORT: DET.PROC
-  #   P: BL01T-DI-CAM-01
-  #   R: ":PROC:"
-  #   NDARRAY_PORT: DET.DET
+  - type: ADCore.NDProcess
+    PORT: DET.PROC
+    P: BL01T-DI-CAM-01
+    R: ":PROC:"
+    NDARRAY_PORT: DET.ROI
 
   - type: ADCore.NDFileHDF5
     PORT: DET.HDF
     P: BL01T-DI-CAM-01
     R: ":HDF:"
-    NDARRAY_PORT: DET.DET
+    NDARRAY_PORT: DET.PROC
 
   - type: ADCore.NDFileTIFF
     PORT: DET.TIFF
     P: BL01T-DI-CAM-01
     R: ":TIFF:"
-    NDARRAY_PORT: DET.DET
+    NDARRAY_PORT: DET.PROC
